WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22041
Fix CURL crashes on the test suite
https://bugs.webkit.org/show_bug.cgi?id=22041
Summary
Fix CURL crashes on the test suite
Holger Freyther
Reported
2008-11-02 11:36:46 PST
There are some crashes in the curl backend on the layout test suite. To make my life more easy I try to collect the fixes here.
Attachments
Do not run into an assert
(1.30 KB, patch)
2008-11-02 11:37 PST
,
Holger Freyther
alp
: review+
Details
Formatted Diff
Diff
Fix segfault with setDefersLoading
(2.73 KB, patch)
2008-11-02 11:39 PST
,
Holger Freyther
alp
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Holger Freyther
Comment 1
2008-11-02 11:37:57 PST
Created
attachment 24850
[details]
Do not run into an assert Do not call didReceiveData if we have nothing to offer.
Holger Freyther
Comment 2
2008-11-02 11:39:47 PST
Created
attachment 24851
[details]
Fix segfault with setDefersLoading Do not call into curl when we don't have a CURL handle.
Alp Toker
Comment 3
2008-11-03 08:50:45 PST
Comment on
attachment 24850
[details]
Do not run into an assert r=me Added the same check to the other didReceiveData() in the same func too.
Alp Toker
Comment 4
2008-11-03 09:10:39 PST
Comment on
attachment 24851
[details]
Fix segfault with setDefersLoading r=me Good catch. I didn't spot this when testing recently because I neither had debugging enabled nor a recent enough version of curl to get the defer code compiled. Oops! Extra braces should not be there in the first if case to suit WebKit coding style. Will fix and land to get this out of the way.
Holger Freyther
Comment 5
2008-11-03 13:21:52 PST
Okay the patch was put into svn, SOUP got updated too => close this bug for now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug