2008-11-03  Holger Hans Peter Freyther  <zecke@selfish.org>

Reviewed by Alp Toker.

        https://bugs.webkit.org/show_bug.cgi?id=22041
        Fix CURL crashes on the test suite

        Do not send "no data" to WebCore in parseDataUrl().

        Fixes assert on fast/tokenizer/image-empty-crash.html

        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::parseDataUrl):


Canonical link: https://commits.webkit.org/30288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38070 268f45cc-cd09-0410-ab3c-d52691b4dbfc