WebCore/platform/network/curl/ResourceHandleManager.cpp
@@ -517,12 +517,12 @@ static void parseDataUrl(ResourceHandle* handle)
         size_t outLength = 0;
         char* outData = 0;
         outData = reinterpret_cast<char*>(g_base64_decode(data.utf8().data(), &outLength));
-        if (outData)
+        if (outData && outLength > 0)
             client->didReceiveData(handle, outData, outLength, 0);
         g_free(outData);
 #else
         Vector<char> out;
-        if (base64Decode(data.latin1().data(), data.latin1().length(), out))
+        if (base64Decode(data.latin1().data(), data.latin1().length(), out) && out.size() > 0)
             client->didReceiveData(handle, out.data(), out.size(), 0);
 #endif
     } else {
@@ -530,7 +530,8 @@ static void parseDataUrl(ResourceHandle* handle)
         data = decodeURLEscapeSequences(data, TextEncoding(charset));
         response.setTextEncodingName("UTF-16");
         client->didReceiveResponse(handle, response);
-        client->didReceiveData(handle, reinterpret_cast<const char*>(data.characters()), data.length() * sizeof(UChar), 0);
+        if (data.length() > 0)
+            client->didReceiveData(handle, reinterpret_cast<const char*>(data.characters()), data.length() * sizeof(UChar), 0);
     }
 
     client->didFinishLoading(handle);
